2006-08-05  Matthias Clasen  <mclasen@redhat.com>

	* multiload.schemas.in: Add the missing default
	value for view_diskload.  (#349885)

2006-07-31  Christophe Bliard  <christophe.bliard@trux.info>

	* docs/fr/fr.po: Updated French translation.

2006-07-27  Francisco Javier F. Serrador  <serrador@openshine.com>

	* docs/es/es.po: Updated Spanish translation.

2006-07-27  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* main.c: (multiload_applet_new):
	use panel_applet_set_background_widget instead of monitoring
	background changes ourselves

2006-07-26  Benoît Dejean  <benoit@placenet.org>

	* docs/C/multiload.xml: Fixed documentation
	about CPU nice. Closes #347271.

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* docs/fr/fr.po: Small update of French translation
	* docs/fr/figures/multiload-preferences.png:
	Update French documentation screenshot

2006-07-23  Daniel Nylander  <po@danielnylander.se>

	* docs/sv/sv.po: Updated translation
	* docs/sv/multiload.xml: Removed obsolete translation
	* docs/sv/legal.xml: Removed obsolete translation
	* docs/Makefile.am: Added "sv" to DOC_LINGUAS

2006-07-08  Christian Rose  <menthos@menthos.com>

	* docs/Makefile.am: Removed "sv" from DOC_LINGUAS to
	temporarily work around	bug #346902.

2006-07-05  Benoît Dejean  <benoit@placenet.org>

	* global.h:
	* linux-proc.c: (GetLoadAvg):
	* main.c: (multiload_applet_tooltip_update):

	Loadavg improvments.
	Displays numeric load average.
	Adjusted scale.
	Closes #341822.

2006-07-05  Benoît Dejean  <benoit@placenet.org>

        * linux-proc.c: (GetDiskLoad): Don't poll CIFS.
        Closes #344031.

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-02-14  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: Unconditionally destroy the graph widgets even if they're
	  not visible, otherwise they will simply be destroyed when their
	  container is destroyed, only it will crash now that it's user_data