@@ -1,3 +1,8 @@
+2006-08-06  Benoît Dejean  <benoit@placenet.org>
+
+	* main.c: (multiload_leave_cb), (multiload_applet_new): Updates the
+	tooltip only if needed. This saves a lot of CPU time.
+
 2006-08-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* multiload.schemas.in: Add the missing default
